--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,15 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  
-  /* height: 100%; */
 }
 
-
-html, body {
-width: 100%;
-  /* position: relative; */
-  /* background-color: bisque; */
+html, body, #root {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  
 }
 
 .button {
