--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,9 +1,10 @@
 .nav-container{
-    background-color: blueviolet;
+    background-color: rgba(189, 152, 224, 1);
     width: 100%;
-    height: 50px;
-    position: sticky;
+    height: 70px;
+    position: fixed;
     top: 0;
+    z-index: 1;
 }
 .nav{
     width: 80%;
