--- a/src/pages/sign.css
+++ b/src/pages/sign.css
@@ -1,12 +1,13 @@
 .form{
-    width: 20%;
+    width: 400px;
+    min-width: 300px;
+    max-width: 500px;
     margin: auto;
     margin-top: 50px;
-
     display: flex;
     flex-direction: column;
     align-items: center;
-    border:1px solid blueviolet;
+    border:1px solid rgba(189, 152, 224, 1);
     border-radius: 20px;
 }
 
@@ -38,7 +39,7 @@
     width: 200px;
     height: 40px;
     border: none;
-    border: 1px solid blueviolet;
+    border: 1px solid rgba(189, 152, 224, 1);
     border-radius: 10px;
     padding: 10px;
 
