--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,10 +1,11 @@
 .nav-container{
     background-color: rgba(189, 152, 224, 1);
     width: 100%;
+    left:0;
     height: 70px;
     position: fixed;
     top: 0;
-    z-index: 1;
+    z-index: 2;
 }
 .nav{
     width: 96%;
