--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,33 +1,32 @@
-.nav-container{
-    background-color: rgba(20, 62, 249, 0.6);
-    width: 100%;
-    left:0;
-    height: 70px;
-    position: fixed;
-    top: 0;
-    z-index: 2;
+.nav-container {
+  background-color: #212121;
+  width: 100%;
+  left: 0;
+  height: 70px;
+  position: fixed;
+  top: 0;
+  z-index: 2;
 }
-.nav{
-    width: 96%;
-    display: flex;
-    height: 100%;
-    margin: auto;
-    align-items: center;
-    justify-content: space-between;
-    /* font-size: 30px; */
+.nav {
+  width: 96%;
+  display: flex;
+  height: 100%;
+  margin: auto;
+  align-items: center;
+  justify-content: space-between;
+  /* font-size: 30px; */
 }
-.nav p{
-    color:aliceblue;
-    font-size: 30px;
+.nav p {
+  color: aliceblue;
+  font-size: 30px;
 }
-.nav-actions ul{
-    display: flex;
-    list-style: none;
-    gap: 30px;
-    
+.nav-actions ul {
+  display: flex;
+  list-style: none;
+  gap: 30px;
 }
 
-a{
-    text-decoration: none;
-    color:aliceblue
+a {
+  text-decoration: none;
+  color: aliceblue;
 }
